# Discrete-Project-Final

./: CMakeLists.txt  DiscreteFinalProject.vcxproj  EfficiencyModule.cpp  Functions.h  InferenceEngine.cpp  ProofModule.cpp  ProofModule.h  TestingModule.h  University.cpp  University.h  main.cpp
